search bar align fixed

--- a/FleetUI/src/app/configuration/configuration.component.scss
+++ b/FleetUI/src/app/configuration/configuration.component.scss
@@ -478,7 +478,7 @@ tr:nth-child(even) {
   display: flex;
   flex-direction: column;
   gap: 1rem; /* Space between search bar and date filters */
-  width:100%;
+  width:505px;
   gap: 5px;
   padding: 10px;
   background-color: #f7f7f7;
